Fix: btn align

--- a/source/sass/guess.scss
+++ b/source/sass/guess.scss
@@ -247,9 +247,9 @@
   width: 200px;
   height: 50px;
 
+  display: block;
   margin: 2em auto 0;
   text-align: center;
-  vertical-align: middle;
 
   font-size: 15px;
   border-radius: 30px;
